--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
     "strict": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "moduleResolution": "node16"
+    "moduleResolution": "node16",
+    "typeRoots": [
+      "./src/@types"
+    ]
   }
 }
