--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "tsx watch src/server.ts",
-		"migrate": "pnpm prisma migrate dev"
+		"migrate": "pnpm prisma migrate dev",
+		"generate": "pnpm prisma generate"
 	},
 	"keywords": [],
 	"author": "",
