--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
 		"@types/jsonwebtoken": "^9.0.10",
 		"prisma": "^6.16.2",
 		"tsx": "^4.20.6",
-		"typescript": "^5.9.2"
+		"typescript": "^5.9.2",
+		"@types/multer": "^2.0.0"
 	},
 	"dependencies": {
 		"@prisma/client": "^6.16.2",
-		"@types/multer": "^2.0.0",
 		"bcryptjs": "^3.0.2",
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.2",
